--- a/new/css/style.css
+++ b/new/css/style.css
@@ -43,7 +43,7 @@ section { overflow: hidden; }
 
 /* Typography
 -------------------------------------------------------------- */
-h1, h2 { margin: 0; }
+h1, h2, h3 { margin: 0; }
 
 h1 {
 	font-family: "Montserrat", arial, sans-serif;
@@ -53,10 +53,18 @@ h1 {
 	letter-spacing: -0.08em;
 	color: #161a1b; 
 }
-
 h2 {
 	font-family: "Montserrat", arial, sans-serif;
-	font-size: 18px;
+	font-size: 20px;
+	font-weight: 700;
+	line-height: 1em;
+	letter-spacing: 0.2em;
+	text-transform: uppercase;
+	color: #161a1b;
+}
+h3 {
+	font-family: "Montserrat", arial, sans-serif;
+	font-size: 12px;
 	font-weight: 700;
 	line-height: 1em;
 	letter-spacing: 0.2em;
@@ -135,13 +143,6 @@ h2 {
   top: -5%;
 }
 
-.sphere img{
-	-webkit-transform: scale(0.7);
-	-moz-transform: scale(0.7);
-	-ms-transform: scale(0.7,0.7);
-	transform: scale(0.7);
-}
-
 /* Text */
 .title {
 	display: block;
@@ -190,7 +191,7 @@ h2 {
 	display: block;
 	width: 50px;
 	height: 50px;
-	opacity: .5;
+	opacity: .6;
 	-webkit-transition: opacity 0.3s;
 	-moz-transition: opacity 0.3s;
 	transition: opacity 0.3s;
@@ -334,13 +335,6 @@ h2 {
 	/* TITLE & CONTACT */
 	.title { top: 15%;}
 	.contact .icons { margin-bottom: 0px; }
-	/* SIZES */
-	.sphere img{
-		-webkit-transform: scale(0.6);
-		-moz-transform: scale(0.6);
-		-ms-transform: scale(0.6,0.6);
-		transform: scale(0.6);
-	}
 	/* POSITIONING */
 	.depth-5 {
 		position: absolute;
@@ -413,12 +407,6 @@ h2 {
 	.contact { bottom: 10%; }
 	.contact .icons { margin-bottom: 12px; }
 	/* SIZES */
-	.sphere img{
-		-webkit-transform: scale(1);
-		-moz-transform: scale(1);
-		-ms-transform: scale(1,1);
-		transform: scale(1);
-	}
 	.depth-5 img, .depth-4 img, .depth-3 img, .depth-2 img, .depth-1 img {
 		-webkit-transform: scale(0.8);
 		-moz-transform: scale(0.8);
@@ -494,12 +482,6 @@ h2 {
 	.contact { bottom: 8%; }
 	.contact .icons { margin-bottom: 12px; }
 	/* SIZES */
-	.sphere img{
-		-webkit-transform: scale(1);
-		-moz-transform: scale(1);
-		-ms-transform: scale(1,1);
-		transform: scale(1);
-	}
 	.depth-5 img, .depth-4 img, .depth-3 img, .depth-2 img, .depth-1 img {
 		-webkit-transform: scale(0.8);
 		-moz-transform: scale(0.8);
@@ -570,12 +552,6 @@ h2 {
 	h1 { font-size: 150px; line-height: 150px; }
 	.sub-title { font-size: 25px; line-height: 25px; margin-top: 20px; }
 	/* SIZES */
-	.sphere img{
-		-webkit-transform: scale(1);
-		-moz-transform: scale(1);
-		-ms-transform: scale(1,1);
-		transform: scale(1);
-	}
 	.depth-5 img, .depth-4 img, .depth-3 img, .depth-2 img, .depth-1 img {
 		-webkit-transform: scale(1);
 		-moz-transform: scale(1);
