--- a/new/css/style.css
+++ b/new/css/style.css
@@ -30,7 +30,7 @@ img {
 
 body {
 	background: #fff;
-	color: #666666;
+	color: #ffffff;
 	font: normal 16px "Cardo", georgia, serif;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-size-adjust: 100%;
@@ -124,7 +124,7 @@ h3 {
 
 /* Background */
 .background {
-  background: url(../img/background.jpg) no-repeat 50% 100%;
+  background: url(../img/bg.jpg) no-repeat 50% 100%;
   bottom: -20px;
   background-size: cover;
   position: absolute;
@@ -403,7 +403,7 @@ h3 {
 /* Tablet Portrait */
 @media all and (min-width: 700px) {
 	/* HERO */
-	h1 { font-size: 130px; line-height: 130px; }
+	h1 { font-size: 110px; line-height: 130px; }
 	.sub-title { font-size: 20px; line-height: 20px; margin-top: 10px; }
 	/* TITLE & CONTACT */
 	.title { top: 18%;}
@@ -553,7 +553,7 @@ h3 {
 
 @media all and (min-width: 1200px) {
 	/* HERO */
-	h1 { font-size: 150px; line-height: 150px; }
+	h1 { font-size: 140px; line-height: 150px; }
 	.sub-title { font-size: 25px; line-height: 25px; margin-top: 20px; }
 	/* SIZES */
 	.depth-5 img, .depth-4 img, .depth-3 img, .depth-2 img, .depth-1 img {
@@ -657,7 +657,7 @@ h3 {
 
 @media all and (min-width: 1400px) {
 	/* HERO */
-	h1 { font-size: 160px; line-height: 160px; }
+	h1 { font-size: 150px; line-height: 160px; }
 	.sub-title { font-size: 25px; line-height: 25px; margin-top: 20px; }
 	/* POSITIONING */
 	.depth-5 {
@@ -734,14 +734,14 @@ h3 {
 
 @media all and (min-width: 1600px) {
 	/* HERO */
-	h1 { font-size: 180px; line-height: 180px; }
+	h1 { font-size: 160px; line-height: 180px; }
 	.sub-title { font-size: 25px; line-height: 25px; margin-top: 25px; }
 }
 
 
 @media all and (min-width: 1920px) {
 	/* HERO */
-	h1 { font-size: 200px; line-height: 200px; }
+	h1 { font-size: 170px; line-height: 200px; }
 	.sub-title { font-size: 30px; line-height: 30px; margin-top: 30px; }
 	/* POSITIONING */
 	.depth-5 {
