--- a/new/css/responsive.css
+++ b/new/css/responsive.css
@@ -177,4 +177,5 @@
 	.f-title-one{ text-align:center;}
 	.f-title-two{ text-align:center;}
 	.list_carousel.responsive{ margin-bottom:0; margin-top:50px;}
+	#anchor5{ padding-bottom:35px;}
 }
