--- a/new/css/responsive.css
+++ b/new/css/responsive.css
@@ -2,9 +2,7 @@
 /* Responsive Layout */
 
 /* Smaller than 1180 (devices and browsers) */
-@media only screen and (max-width: 1180px) {
-	
-}
+@media only screen and (max-width: 1180px) {}
 
 /* Smaller than 1180 (devices and browsers) */
 @media only screen and (min-width: 976px) and (max-width: 1258px) {
@@ -15,7 +13,6 @@
 	.highlight {font-size: 75px;}
 	.milestone-details{font-size: 16px;}
 	.logos{width: 900px; margin: 70px auto 220px}
-	.bottom-line{width: 900px;}
 	.img-spacer{width: 900px; margin-top: 190px;}
 	.img-spacer img{width: 900px;}
 	.img-item{top: -125px;}
@@ -26,7 +23,6 @@
 	.footer-container{width: 959px; font-size: 15px;}
 	.project-content{width: 900px;}
 	.project-content img{width: 900px;}
-	.we-are{font-size: 110px;}
 	.s-container{width: 960px;}
 	.sl-element{width: 192px;}
 	.menu ul li {padding: 0 15px; font-size: 13px;}
@@ -34,9 +30,6 @@
 	.p-image-01 img{width: 940px;}
 	.parallax.p-two { height: 555px;}
 	.main-title {font-size: 60px;  height: 352px;top: 50%; margin-top:-176px;}
-	.slider-controls li a {top: 41%;}
-	.s-next {margin-right: 30px;}
-	.s-prev {margin-left: 30px;}
 	.ch-grid div span {margin: 50% 20px 0px 20px; font-size: 15px;}
 	.main-title .spacer {margin: 5px auto 25px;}
 	.main-title ul {margin: 0;}
@@ -48,7 +41,6 @@
 	.hideme, .p-image-02, .newtr{opacity: 1;}
 	.parallax .hideme-slide, .parallax .hideme-slide2{ bottom:0 !important; opacity: 1 !important;}
 	.menu{display: none;}
-	.slider-controls {display: none;}
 	.jump-menu{display: block;}
 	.main-title { height: 350px;top: 50%; margin-top:-175px;}
 	.sl-element{margin-bottom: 50px;}
@@ -76,7 +68,6 @@
 	.footer-container {width: 700px; padding: 90px 0;}
 	.foot-third {width: 320px; padding: 0 0 0 30px;}
 	.foot-third:last-child {margin-top: 50px; width: 640px; padding: 0 30px;}
-	.bottom-line{width: 700px;}
 	.milestone-details{font-size: 15px; padding: 0px 0 100px;}
 	.s-info span {font-size: 17px;}
 	.sl-element{width: 200px;}
@@ -110,7 +101,6 @@
 	.s-container{width: 400px}
 	.f-element{width: 100%;}
 	#filters{padding: 0 40px;}
-	.bottom-line{width: 400px;}
 	.project-content{width: 400px;}
 	.project-content img{width: 400px;}
 	.logos{width: 400px; margin: 70px auto 50px;}
@@ -154,7 +144,6 @@
 	.s-container{width: 300px}
 	.f-element{width: 100%;}
 	#filters{padding: 0 40px;}
-	.bottom-line{width: 300px;}
 	.project-content{width: 300px;}
 	.project-content img{width: 300px;}
 	.logos{width: 300px; margin: 70px auto 50px;}
