--- a/new/css/solido.css
+++ b/new/css/solido.css
@@ -981,40 +981,68 @@ html, body {
 	color: #646464
 }
 
-/* Social Footer */
-.socialFooter{
-	 position:relative;
-	 background:#fff;
-	 width:100%;
-	 height:201px;
+/* Social Contact Footer */
+.contact {
+	position:relative;
+	background:#fff;
+	width:100%;
+	height:200px;
 }
-.social-icons{
-	width:215px;
-	margin: 0px auto 35px;
-	padding-top:50px;
+.contact .icons {
+	margin: 0;
+	padding: 0;
+	margin-top: 35px;
+	margin-bottom: 10px;
+	text-align: center;
+	list-style: none;
+	list-style-type: none;
 }
-.socialFooter .social-icons .social{
-/*	float: right;
-	right: 50%;
-	position: relative;*/
+.contact .icons li {
+	display: inline-block;
+	margin-right: 10px;
 }
-.socialFooter .social-icons .social div{
-	width: 51px;
-	height: 51px;
-	overflow: hidden;
-	background: url("../img/social-footer.png");
-	float: left;
-	margin: 0 10px;
-}.socialFooter .social-icons .social div:hover{opacity: 0.7;}
-.socialFooter .social-icons .social .face{ background-position: right bottom;}
-.socialFooter .social-icons .social .twitt{ background-position: left bottom;}
-.socialFooter .social-icons .social .plus{ background-position: -51px bottom;}
-.socialFooter .copy{
+.contact .icons li:last-of-type { margin-right: 0px; }
+.contact .icons li a {
+	display: block;
+	width: 65px;
+	height: 65px;
+	opacity: .6;
+	-webkit-transition: opacity 0.3s;
+	-moz-transition: opacity 0.3s;
+	transition: opacity 0.3s;
+}
+.contact .icons .github {
+	background: url(../img/github.png) no-repeat center;
+	background-size: 65px 65px;
+}
+.contact .icons .stackoverflow {
+	background: url(../img/stackoverflow.png) no-repeat center;
+	background-size: 65px 65px;
+}
+.contact .icons .codecademy {
+	background: url(../img/codecademy.png) no-repeat center;
+	background-size: 65px 65px;
+}
+.contact .icons .khanacademy {
+	background: url(../img/khanacademy.png) no-repeat center;
+	background-size: 65px 65px;
+}
+.contact .icons .linkedin {
+	background: url(../img/linkedin.png) no-repeat center;
+	background-size: 65px 65px;
+}
+.contact .icons li a:hover {
+	opacity: 1;
+	-webkit-transition: opacity 0.3s;
+	-moz-transition: opacity 0.3s;
+	transition: opacity 0.3s;
+}
+.contact .copy-right {
 	text-align:center;
 	font-family: 'Open Sans', sans-serif;
 	color: #aaa;
 	font-size: 13px;
-	margin-top: 35px;
+	margin-top: 30px;
 }
 
 /* Jump Menu */
