--- a/new/css/main.css
+++ b/new/css/main.css
@@ -13,7 +13,6 @@ body {
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
- * Customize the background color to match your design.
  */
 ::-moz-selection {
     background: #b3d4fc;
@@ -52,6 +51,14 @@ textarea {
     resize: vertical;
 }
 
+/* Browser Upgrade Prompt */
+.browserupgrade {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
+
 /* ==========================================================================
    Chrome Frame prompt
    ========================================================================== */
@@ -61,11 +68,6 @@ textarea {
     color: #000;
     padding: 0.2em 0;
 }
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-/* TODO: implement */
 
 /* ==========================================================================
    Helper classes
@@ -148,14 +150,6 @@ textarea {
     *zoom: 1;
 }
 
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   ========================================================================== */
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
-
 @media print,
        (-o-min-device-pixel-ratio: 5/4),
        (-webkit-min-device-pixel-ratio: 1.25),
@@ -164,8 +158,7 @@ textarea {
 }
 
 /* ==========================================================================
-   Print styles.
-   Inlined to avoid required HTTP connection: h5bp.com/r
+   Print styles. Inlined to avoid required HTTP connection: h5bp.com/r
    ========================================================================== */
 @media print {
     * {
