--- a/new/css/responsive.css
+++ b/new/css/responsive.css
@@ -1,29 +1,25 @@
 @charset "UTF-8";
-/* Responsive Layout */
 
-/* Smaller than 1180 (devices and browsers) */
-@media only screen and (max-width: 1180px) {}
-
-/* Smaller than 1180 (devices and browsers) */
+/* Large tablets and small computer monitors (devices and browsers) */
 @media only screen and (min-width: 976px) and (max-width: 1258px) {
 	.main-title ul {font-size: 65px;}
-	.full{width: 960px;}
-	.f-element{width: 240px;}
+	.full {width: 960px;}
+	.f-element {width: 240px;}
 	.highlight {font-size: 75px;}
-	.milestone-details{font-size: 16px;}
-	.logos{width: 900px; margin: 70px auto 220px}
-	.img-spacer{width: 900px; margin-top: 190px;}
-	.img-spacer img{width: 900px;}
-	.img-item{top: -125px;}
-	.footer-container span{font-size: 13px;}
-	.footer-container{width: 959px; font-size: 15px;}
-	.project-content{width: 900px;}
-	.project-content img{width: 900px;}
-	.s-container{width: 960px;}
-	.sl-element{width: 240px;}
+	.milestone-details {font-size: 16px;}
+	.logos {width: 900px; margin: 70px auto 220px}
+	.img-spacer {width: 900px; margin-top: 190px;}
+	.img-spacer img {width: 900px;}
+	.img-item {top: -125px;}
+	.footer-container span {font-size: 13px;}
+	.footer-container {width: 959px; font-size: 15px;}
+	.project-content {width: 900px;}
+	.project-content img {width: 900px;}
+	.s-container {width: 960px;}
+	.sl-element {width: 240px;}
 	.menu ul li {padding: 0 15px; font-size: 13px;}
 	.p-image-01 {margin-left: -470px; width: 940px;}
-	.p-image-01 img{width: 940px;}
+	.p-image-01 img {width: 940px;}
 	.parallax.p-two { height: 555px;}
 	.main-title {font-size: 60px;  height: 352px;top: 50%; margin-top:-176px;}
 	.ch-grid div span {margin: 50% 20px 0px 20px; font-size: 15px;}
@@ -32,127 +28,147 @@
 	.p-category {top: 25%;}
 }
 
-/* Smaller than standard 960 (devices and browsers) */
+/* Anything smaller than 976 pixels (devices and browsers) */
 @media only screen and (max-width: 976px) {
-	.hideme, .p-image-02, .newtr{opacity: 1;}
-	.parallax .hideme-slide, .parallax .hideme-slide2{ bottom:0 !important; opacity: 1 !important;}
-	.menu{display: none;}
-	.jump-menu{display: block;}
+	.hideme, .p-image-02, .newtr {opacity: 1;}
+	.parallax .hideme-slide, .parallax .hideme-slide2 { bottom:0 !important; opacity: 1 !important;}
+	.menu {display: none;}
+	.jump-menu {display: block;}
 	.main-title { height: 350px;top: 50%; margin-top:-175px;}
-	.sl-element{margin-bottom: 50px;}
-	.buy-logo{ margin-top: 15px;}
+	.sl-element {margin-bottom: 50px;}
+	.buy-logo { margin-top: 15px;}
+	html {font-size: 75%;}
+	#nav2 {display: block; position: relative; top: auto; left: auto; font-size: 75%;}
+	#nav2 > a {
+		width: 50px;
+		height: 75px;
+		text-align: left;
+		text-indent: -9999px;
+		position: relative;
+		background: url("../img/menu-icon-blk.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+		float: right;
+		cursor: pointer;
+	}
+	#nav2:not(:target) > a:first-of-type,#nav2:target > a:last-of-type {display: block;}
+	#nav2.active > ul { display:block;}
+	#nav2 > ul {height: auto; display: none; position: absolute; left: 0; right: 0; margin-top: 75px;}
+	#nav2:target > ul {display: block;}
+	#nav2 > ul > li {width: 100%; float: none;}
+	#nav2 > ul > li > a {height: auto; text-align: left; padding: 0 0.833em;}
+	#nav2 > ul > li:not( :last-child ) > a {border-right: none; border-bottom: 1px dotted #999;}
+	#nav2 li ul {position: static; padding: 1.25em; padding-top: 0;}
 }
 
-/* Tablet Portrait size to standard 960 (devices and browsers) */
+/* Tablet portrait sizes (devices and browsers) */
 @media only screen and (min-width: 796px) and (max-width: 976px) {
-	.main-title ul{ font-size:40px;}
-	.full{width: 783px;}
-	.s-container{width: 705px;}
-	.s-info{padding: 0 10px; font-size: 13px;}
+	.main-title ul { font-size:40px;}
+	.full {width: 783px;}
+	.s-container {width: 705px;}
+	.s-info {padding: 0 10px; font-size: 13px;}
 	.s-info span {font-size: 17px;}
-	.sl-element{width: 235px;}
-	.f-element{width: 180px; padding-left: 10px;}
+	.sl-element {width: 235px;}
+	.f-element {width: 180px; padding-left: 10px;}
 	.f-ico {margin: 0 auto;}
-	.highlight{font-size: 40px;}
-	.s-info{margin-bottom: 50px;}
+	.highlight {font-size: 40px;}
+	.s-info {margin-bottom: 50px;}
 	.project-content {width: 700px;}
-	.project-content img{width: 700px;}
-	.logos{width: 680px; margin: 70px auto 150px}
-	.img-spacer{width: 700px; margin-top: 150px;}
-	.img-spacer img{width: 700px;}
-	.img-item{top: -80px;}
+	.project-content img {width: 700px;}
+	.logos {width: 680px; margin: 70px auto 150px}
+	.img-spacer {width: 700px; margin-top: 150px;}
+	.img-spacer img {width: 700px;}
+	.img-item {top: -80px;}
 	.footer-container {width: 700px; padding: 90px 0;}
-	.milestone-details{font-size: 15px; padding: 0px 0 100px;}
+	.milestone-details {font-size: 15px; padding: 0px 0 100px;}
 	.p-image-01 {margin-left: -380px; width: 760px;}
-	.p-image-01 img{width: 760px;}
+	.p-image-01 img {width: 760px;}
 	.parallax.p-two {height: 520px;}
 	.main-title {font-size: 50px;}
 	.main-title span {top: 100px;}
 }
 
-/* All Mobile Sizes (devices and browser) */
+/* All mobile sizes (devices and browser) */
 @media only screen and (max-width: 795px) {
-	.main-title ul{ margin-top:0; height:80px;}
-	.main-title .spacer{ margin:20px auto;}
+	.main-title ul { margin-top:0; height:80px;}
+	.main-title .spacer { margin:20px auto;}
 }
 
-/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+/* Mobile landscape size to tablet portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 795px) {
-	.p-image-02 div{ left:50%;}
-	.p-image-first{margin-left:-225px;}
-	.p-image-first img{ width:450px}
-	.p-image-second{margin-left:-300px;}	
-	.p-image-second img{ width:600px}
-	.vegas-overlay{ display:none;}
-	.main-title ul{ font-size:20px;}
-	.main-title .second-title{ width:345px;}
-	.full{width: 466px;}
-	.title.one{font-size: 40px; padding: 60px 40px 11px;}
-	.title.two{font-size: 17px; padding: 0px 40px; width: auto;}
-	.p-info{width: 400px;}
-	.s-container{width: 440px}
-	.sl-element{width: 220px;}
-	.f-element{width: 100%;}
-	#filters{padding: 0 40px;}
-	.project-content{width: 400px;}
-	.project-content img{width: 400px;}
-	.logos{width: 400px; margin: 70px auto 50px;}
-	.img-spacer{width: 400px; margin-top: 50px;}
-	.img-spacer img{width: 400px;}
+	.p-image-02 div { left:50%;}
+	.p-image-first {margin-left:-225px;}
+	.p-image-first img { width:450px}
+	.p-image-second {margin-left:-300px;}	
+	.p-image-second img { width:600px}
+	.vegas-overlay { display:none;}
+	.main-title ul { font-size:20px;}
+	.main-title .second-title { width:345px;}
+	.full {width: 466px;}
+	.title.one {font-size: 40px; padding: 60px 40px 11px;}
+	.title.two {font-size: 17px; padding: 0px 40px; width: auto;}
+	.p-info {width: 400px;}
+	.s-container {width: 440px}
+	.sl-element {width: 220px;}
+	.f-element {width: 100%;}
+	#filters {padding: 0 40px;}
+	.project-content {width: 400px;}
+	.project-content img {width: 400px;}
+	.logos {width: 400px; margin: 70px auto 50px;}
+	.img-spacer {width: 400px; margin-top: 50px;}
+	.img-spacer img {width: 400px;}
 	.img-item {top: 10px;}
 	.footer-container {width: 400px;}
 	.p-image-01 {margin-left: -230px; width: 460px;}
-	.p-image-01 img{width: 460px;}
+	.p-image-01 img {width: 460px;}
 	.main-title {font-size: 25px;}
 	.main-title span {top: 70px;}
 	.logo {font-size: 23px;}
-	.parallax.p-one{ height:600px;}
+	.parallax.p-one { height:600px;}
 	.parallax.p-two {height: 400px;}
 }
 
-/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+/* Mobile portrait size to mobile landscape size (devices and browsers) */
 @media only screen and (max-width: 479px) {
-.hideme{opacity: 1;}
-.hideme-slide{opacity: 1; bottom: auto !important;}
+	.hideme {opacity: 1;}
+	.hideme-slide {opacity: 1; bottom: auto !important;}
 	.main-title { height: 300px;top: 50%; margin-top:-150px;}
-	.logo{ margin-left:20px;}
-	.p-image-02 div{ left:50%;}
-	.p-image-first img{ width:222px;}
-	.p-image-first{margin-left:-111px;}
-	.p-image-second img{ width:300px; }
-	.p-image-second{margin-left:-150px;}
-	.p-image-02 .p-image-second{ left:50%;}
-	.vegas-overlay{ display:none;}
-	.main-title ul{ font-size:20px;}
-	.main-title .second-title{ font-size:13px; width:240px;}
-	.full{width: 300px;}
-	.menu{display: none;}
-	.title.one{font-size: 19px; padding: 40px 40px 50px; width: auto;}
-	.title.two{font-size: 17px; padding: 0px 40px; width: auto;}
-	.p-title-two{ font-size:14px;}
-	.p-info{width: 300px;}
-	.f-element{width: 100%;}
-	#filters{padding: 0 40px;}
-	.project-content{width: 300px;}
-	.project-content img{width: 300px;}
-	.logos{width: 300px; margin: 70px auto 50px;}
-	.img-spacer{width: 300px; margin-top: 0;}
-	.img-spacer img{width: 300px;}
+	.logo { margin-left:20px;}
+	.p-image-02 div { left:50%;}
+	.p-image-first img { width:222px;}
+	.p-image-first {margin-left:-111px;}
+	.p-image-second img { width:300px; }
+	.p-image-second {margin-left:-150px;}
+	.p-image-02 .p-image-second { left:50%;}
+	.vegas-overlay { display:none;}
+	.main-title ul { font-size:20px;}
+	.main-title .second-title { font-size:13px; width:240px;}
+	.full {width: 300px;}
+	.menu {display: none;}
+	.title.one {font-size: 19px; padding: 40px 40px 50px; width: auto;}
+	.title.two {font-size: 17px; padding: 0px 40px; width: auto;}
+	.p-title-two { font-size:14px;}
+	.p-info {width: 300px;}
+	.f-element {width: 100%;}
+	#filters {padding: 0 40px;}
+	.project-content {width: 300px;}
+	.project-content img {width: 300px;}
+	.logos {width: 300px; margin: 70px auto 50px;}
+	.img-spacer {width: 300px; margin-top: 0;}
+	.img-spacer img {width: 300px;}
 	.img-item {display: none;}
 	.footer-container {width: 300px;}
-	.s-container{width: 360px}
-	.sl-element{width: 180px;}
+	.s-container {width: 360px}
+	.sl-element {width: 180px;}
 	.p-image-01 {margin-left: -150px; width: 300px;}
-	.p-image-01 img{width: 300px;}
+	.p-image-01 img {width: 300px;}
 	.content {width: 100%;overflow: hidden;}
 	.main-title {font-size: 30px;}
-	.welcome{ font-size:13px;}
+	.welcome { font-size:13px;}
 	.main-title span {top: 100px;}
-	.parallax.p-one{ height:280px;}
+	.parallax.p-one { height:280px;}
 	.parallax.p-two {height: 255px;}
-	.parallax.p-two .spacer{ display:none;}
-	.p-title-one{ padding-top:40px;}
-	.scrollup{display: none !important;}
+	.parallax.p-two .spacer { display:none;}
+	.p-title-one { padding-top:40px;}
+	.scrollup {display: none !important;}
 	.mk-video-mask {opacity: 0.5; background:none;}
-	.list_carousel.responsive{ margin-bottom:0; margin-top:50px;}
+	.list_carousel.responsive { margin-bottom:0; margin-top:50px;}
 }
