Made audio button responsive. Cleaned up JS.

--- a/new/css/default.css
+++ b/new/css/default.css
@@ -1121,4 +1121,4 @@ html, body {
 	    -ms-user-select: none;
 	        user-select: none;		
 }
-#homedevice {height:100%; display:none; background-image: url("../img/slider/01.jpg"); background-size: cover;}
+#homedevice {height:100%; display:none; background-image: url("../img/bg.jpg"); background-size: cover;}
