--- a/new/css/default.css
+++ b/new/css/default.css
@@ -115,14 +115,14 @@ html, body {
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 10;
+	z-index: -10;
 	width: 100%;
 	height: 100%;
-	background: url("../img/05.png") center center repeat;
+	background-color: #000;
 }
 
 /* Pre-load */
-#home { height:100%;}
+#home {height:100%;}
 .header {
 	width: 100%;
 	height: 75px;
@@ -765,7 +765,6 @@ html, body {
 
 /* Footer */
 .footer-container {
-	padding-top: 180px;
 	width: 1180px;
 	margin: auto;
 	overflow: auto;
@@ -783,7 +782,6 @@ html, body {
 	color: #d7d9da;
 	text-transform: uppercase;
 }
-.f-bottom {margin-bottom: 115px !important;}
 
 /* Form */
 .error { font-size:13px;}
