Removed unused div and attempted to fix overflow-x issue.

--- a/new/css/default.css
+++ b/new/css/default.css
@@ -83,18 +83,21 @@ html, body {
 	opacity: 0.5;
 }
 .bounce {
-	position: absolute;
-	left: 50%;
 	bottom: 40px;
-	background: url("../img/arrow-down.png") no-repeat;
 	margin-left: -16px;
+	left: 50%;
+	position: absolute;
+	width: 32px;
+	height: 32px;
+	z-index: 10;
+	background: url("../img/arrow-down.png") no-repeat;
 	-webkit-animation: bounce 1s infinite;
 }
 @-webkit-keyframes bounce {
 	0% {bottom: 45px;}
 	25%, 75% {bottom: 55px;}
 	50% {bottom: 60px;}
-	100% {bottom: 40;}
+	100% {bottom: 40px;}
 }
 .welcome {
 	font-family: Georgia, "Times New Roman", Times, serif;
