--- a/new/css/default.css
+++ b/new/css/default.css
@@ -615,8 +615,8 @@ html, body {
 	margin: 20px auto 20px;
 }
 .w-arrows.last { margin: 40px auto 50px;}
-.ch-item {float: left; width: 100%; cursor: pointer;}
-.ch-item img {width: 100%;}
+.ch-item {float: left; width: 100%; height: 100%; cursor: pointer;}
+.ch-item img {width: 100%; height: 100%;}
 .ch-grid img {
     opacity: 1;
 	-webkit-transition: all 0.2s ease-in-out;
