--- a/new/css/main.css
+++ b/new/css/main.css
@@ -10,17 +10,9 @@ body {
     line-height: 1.4;
 }
 
-/*
- * Remove text-shadow in selection highlight: h5bp.com/i
- * These selection rule sets have to be separate.
- */
 ::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
+    background-color: #77be32;
+    color: #fff;
     text-shadow: none;
 }
 
