--- a/new/css/loader.css
+++ b/new/css/loader.css
@@ -30,6 +30,16 @@
     -moz-animation: loader-anim 1s 0s infinite cubic-bezier(0.785, 0.135, 0.15, 0.86);
     animation: loader-anim 1s 0s infinite cubic-bezier(0.785, 0.135, 0.15, 0.86)
 }
+h3 {
+    margin: 0;
+    font-family: "Montserrat", arial, sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 1em;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    color: #161a1b;
+}
 @-webkit-keyframes loader-anim {
     0% {
         left: -102px
